--- a/res/menu/gamelist_options_online.xml
+++ b/res/menu/gamelist_options_online.xml
@@ -4,4 +4,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	<item
 	android:id="@+id/resync"
 	android:title="Update"/>
+	<item
+	android:id="@+id/readall_msgs"
+	android:title="Read All Messages"/>
 </menu>
