--- a/res/layout/game.xml
+++ b/res/layout/game.xml
@@ -14,22 +14,34 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 		android:layout_weight="408"
 		android:src="@drawable/chat"/>
 	</TableRow>
+	<TableRow
+	android:id="@+id/layout02"
+	style="@style/FillWidth"
+	android:layout_below="@id/layout01"
+	android:background="#ff383838">
+		<com.chess.genesis.TabText
+		android:id="@+id/white_name"
+		style="@style/FillWidth"
+		android:gravity="center"
+		android:padding="6dp"
+		android:textSize="14dp"
+		android:layout_weight="50"/>
+		<com.chess.genesis.TabText
+		android:id="@+id/black_name"
+		style="@style/FillWidth"
+		android:gravity="center"
+		android:padding="6dp"
+		android:textSize="14dp"
+		android:layout_weight="50"/>
+	</TableRow>
 	<com.chess.genesis.ViewFlip3D
 	android:id="@+id/board_flip"
-	android:layout_below="@id/layout01">
+	android:layout_below="@id/layout02">
 		<com.chess.genesis.BoardLayout
 		android:id="@+id/board_layout"/>
 		<com.chess.genesis.PlaceLayout
 		android:id="@+id/place_layout"/>
 	</com.chess.genesis.ViewFlip3D>
-	<TextView
-	android:id="@+id/white_name"
-	android:layout_marginLeft="6dp"
-	android:layout_below="@id/board_flip"/>
-	<TextView
-	android:id="@+id/black_name"
-	android:layout_marginLeft="6dp"
-	android:layout_below="@id/white_name"/>
 	<TableRow
 	android:layout_alignParentBottom="true">
 		<com.chess.genesis.MyImageView
