--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -6,52 +6,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 	style="@style/FillWidth"
 	android:layout_weight="82"
 	android:src="@drawable/topbar"/>
-
-	<ScrollView
-	android:layout_below="@id/topbar"
-	android:layout_above="@id/botbar">
-	<TableLayout
+	<ListView
+	android:id="@android:id/list"
 	style="@style/FillWidth"
-	android:padding="6dp"
-	android:shrinkColumns="*"
-	android:stretchColumns="1">
-		<TableRow>
-			<TextView
-			android:textStyle="bold"
-			android:textSize="21dp"
-			android:text="Notifications"/>
-		</TableRow>
-		<TableRow>
-			<TextView
-			android:layout_gravity="center_vertical"
-			android:textSize="18dp"
-			android:text="Enabled"/>
-			<CheckBox
-			android:layout_gravity="right"
-			android:id="@+id/note_enable"/>
-		</TableRow>
-		<TableRow>
-			<TextView
-			android:layout_gravity="center_vertical"
-			android:textSize="18dp"
-			android:text="Update Frequency"/>
-			<Spinner
-			android:layout_gravity="right"
-			android:id="@+id/poll_freq"/>
-		</TableRow>
-		<TableRow>
-			<TextView
-			android:layout_gravity="center_vertical"
-			android:textSize="18dp"
-			android:text="Email Notifications"/>
-			<CheckBox
-			android:id="@+id/email_note"
-			android:layout_gravity="right"
-			android:checked="true"/>
-		</TableRow>
-	</TableLayout>
-	</ScrollView>
-
+	android:layout_below="@id/topbar"
+	android:layout_above="@id/botbar"/>
 	<com.chess.genesis.MyImageView
 	android:id="@+id/botbar"
 	android:layout_alignParentBottom="true"
